--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
   </nav>
 </div>
 <router-outlet></router-outlet>
-<label for="voces">Selecciona la voz:</label>
+<label for="voces">Selecciona la vozz:</label>
 <br>
 <select id="voces">
 </select>
