--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -31,9 +31,9 @@
   text-decoration: none;
   display: block;
   padding: 10px 20px;
-  border-bottom: 2px solid #456789;
+  border-bottom: 2px solid #6d9b23;
   max-width: 200px;
-  background: #234567;
+  background: #6d9b23;
   font-variant: small-caps;
   text-shadow: 1px 1px black;
 }
@@ -64,7 +64,7 @@
 .respmenu {
   color: white;
   position: relative;
-  background: #123456;
+  background: rgb(56, 97, 73);
   min-height: 48px;
 }
 
