--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,7 +32,10 @@
           <a class="nav-link" [routerLink]="['datos']">Datos Atmosfericos</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['Ayuda']">ayuda</a>
+          <a class="nav-link" [routerLink]="['Ayuda']">Ayuda</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['Extra']">Extra</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
