--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,6 +34,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['ayuda']">ayuda</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['contacto']">De Contacto</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
