--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -123,7 +123,7 @@
 
 
     <br>
-    <div class="contenedor">
+    <div class="contenedors">
       <a mat-flat-button color="primary" routerLink="/alojamientos"
         target="_blank">Pag Sig.</a> <!--2 Componente-->
     </div>
