--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -31,6 +31,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['datos']">Datos Atmosfericos</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['verReserva']">Ver Reservaciones</a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
