--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,7 +36,9 @@
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['contacto']">De Contacto</a>
-          <a class="nav-link" [routerLink]="['verReserva']">Ver Reservaciones</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['verReserva']">ver Reservaciones</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
