--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,6 +34,12 @@
         <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN">
           <a class="nav-link" [routerLink]="['graficas']">Gráficas</a>
         </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="!loginADMIN&&!loginUsuario">
+          <a class="nav-link" [routerLink]="['oplogin']">Login</a>
+        </li>
+        <!-- <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN||loginUsuario">
+          <a class="nav-link" [routerLink]="['oplogin']">{{usuario}}</a>
+        </li> -->
       </ul>
       <form class="d-flex" role="search">
         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
