--- a/src/app/components/contacto/contacto.component.html
+++ b/src/app/components/contacto/contacto.component.html
@@ -57,7 +57,7 @@
             <div *ngIf="this.datos.get('asunto')?.errors?.['required']">
                 (El asunto no puede quedar vacío)
             </div>
-            <textarea placeholder="Mensaje" cols="40" rows="4" formControlName="mensaje"></textarea>
+            <textarea placeholder="Haz tu Pregunta" cols="40" rows="4" formControlName="mensaje"></textarea>
             <div *ngIf="this.datos.get('mensaje')?.errors?.['required']">
                 (El mensaje no puede quedar vacío)
             </div>
