--- a/src/app/components/registro-citas/registro-citas.component.html
+++ b/src/app/components/registro-citas/registro-citas.component.html
@@ -74,6 +74,8 @@
                                         formControlName="securityCode"
                                         placeholder="cvv">
                                 </label>
+
+                                <!-- input donde se ingresa el correo a donde se mandaran los datos -->
                                 <label>
                                    Ingresa tu email al que le llegaran los datos de tu reservacion:
                                     <input type="text"
