--- a/src/app/components/ver-citas/ver-citas.component.html
+++ b/src/app/components/ver-citas/ver-citas.component.html
@@ -42,6 +42,7 @@
                         </div>
                     </div></td>
                 <td>
+                    <!-- boton para generar qr, al dar click nos manda a la funcion de generar qr -->
                     <button class="btn btn-warning" (click)="generarQr(reservacion.fullName)">Generar</button></td>
                 <td>
                     <button class="btn btn-danger" (click)="eliminar(reservacion.fullName)">Cancelar reservacion</button></td>
