agregue datos a la ultima pagina

--- a/src/app/more-i/more-i.component.html
+++ b/src/app/more-i/more-i.component.html
@@ -163,3 +163,61 @@
     </p>
   </div>
 </div>
+<br>
+<div class="tx">Algunos blogs que te podrían interesar</div>
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../assets/imagenes/Nomadic.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Nomadic Matt</h5>
+          <p class="card-text">El blog de Matt Kepnes, también conocido como Nomadic Matt, es uno de los blogs de viajes más populares. Ofrece consejos prácticos, guías de destinos, presupuestos de viaje y recursos útiles para viajar de manera económica.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../assets/imagenes/Bondle.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">The Blonde Abroad</h5>
+          <p class="card-text">Este blog es creado por Kiersten Rich, quien comparte sus experiencias de viaje por todo el mundo. Ofrece información detallada sobre destinos, consejos para mujeres viajeras y una amplia gama de contenido relacionado con viajes y estilo de vida.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../assets/imagenes/Expert.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Expert Vagabond</h5>
+          <p class="card-text">Matthew Karsten, el autor de Expert Vagabond, es conocido por sus aventuras alrededor del mundo. Su blog presenta relatos de viajes emocionantes, fotografías impresionantes y consejos prácticos para viajeros intrépidos.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="../../assets/imagenes/Legal.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Legal Nomads</h5>
+          <p class="card-text">Jodi Ettenberg es la autora de Legal Nomads, un blog de viajes que combina sus experiencias de viaje con su pasión por la comida. Ofrece guías de destinos, historias de viajes y recomendaciones culinarias en todo el mundo.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+          <img src="../../assets/imagenes/Abroken.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">A Broken Backpack</h5>
+            <p class="card-text">Melissa Giroux, autora de A Broken Backpack, comparte sus experiencias de viaje independiente y aventuras fuera de lo común. Su blog es una excelente fuente de inspiración para aquellos que buscan explorar destinos no convencionales.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="../../assets/imagenes/Migratology.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Migrationology</h5>
+            <p class="card-text">Mark Wiens es un apasionado viajero y amante de la comida que documenta sus aventuras gastronómicas en Migrationology. Su blog presenta deliciosas guías de comida local, además de destinos de viaje y consejos útiles.</p>
+          </div>
+        </div>
+      </div>
+  </div>
