--- a/src/app/more-i/more-i.component.css
+++ b/src/app/more-i/more-i.component.css
@@ -1,4 +1,4 @@
-.top1{
+.top1 {
     font-size: 45px;
     font-weight: bold;
     color: #6d9b23;
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.tx{ 
+.tx {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -18,7 +18,7 @@
     padding: 10px;
 }
 
-.p1{
+.p1 {
     margin-bottom: 10px;
     text-align: justify;
     font-family: 'Handlee', cursive;
@@ -28,7 +28,7 @@
     font-weight: bold;
 }
 
-.p2{
+.p2 {
     margin-bottom: 10px;
     text-align: justify;
     font-family: 'Handlee', cursive;
@@ -37,7 +37,7 @@
     width: 90%;
 }
 
-img{
+img {
     padding: 7px;
 }
 
@@ -46,26 +46,114 @@ img{
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 20px;
     margin-top: 30px;
-  }
+}
 
-  .fact {
+.fact {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
+}
 
-  .fact h3 {
+.fact h3 {
     margin-top: 0;
     color: #333;
     font-family: 'Chewy', cursive;
     font-weight: bold;
     font-size: 20px;
-  }
+}
 
-  .fact p {
+.fact p {
     margin-bottom: 0;
     color: #666;
     font-family: 'Handlee', cursive;
     font-size: 18px;
-  }
+}
+
+.card-title {
+    font-family: 'Chewy', cursive;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.card-body {
+    margin-bottom: 10px;
+    text-align: justify;
+    font-family: 'Handlee', cursive;
+    font-size: 18px;
+    padding: 5px;
+}
+
+/* Estilos para dispositivos con una anchura máxima de 768px */
+@media only screen and (max-width: 768px) {
+    .top1 {
+        font-size: 30px;
+    }
+
+    .tx {
+        font-size: 20px;
+    }
+
+    .p1,
+    .p2 {
+        font-size: 18px;
+    }
+
+    .interesting-facts {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-gap: 10px;
+    }
+
+    .fact h3 {
+        font-size: 18px;
+    }
+
+    .fact p {
+        font-size: 16px;
+    }
+
+    .card-title {
+        font-size: 18px;
+    }
+
+    .card-body {
+        font-size: 16px;
+    }
+}
+
+/* Estilos para dispositivos con una anchura máxima de 480px */
+@media only screen and (max-width: 480px) {
+    .top1 {
+        font-size: 24px;
+    }
+
+    .tx {
+        font-size: 18px;
+    }
+
+    .p1,
+    .p2 {
+        font-size: 16px;
+    }
+
+    .interesting-facts {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-gap: 5px;
+    }
+
+    .fact h3 {
+        font-size: 16px;
+    }
+
+    .fact p {
+        font-size: 14px;
+    }
+
+    .card-title {
+        font-size: 16px;
+    }
+
+    .card-body {
+        font-size: 14px;
+    }
+}
