--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,21 +34,25 @@
         <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN">
           <a class="nav-link" [routerLink]="['graficas']">Gráficas</a>
         </li>
-        <li class="nav-item" routerLinkActive="active" *ngIf="!loginADMIN&&!loginUsuario">
-          <a class="nav-link" [routerLink]="['oplogin']">Login</a>
-        </li>
-        <!-- <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN||loginUsuario">
-          <a class="nav-link" [routerLink]="['oplogin']">{{usuario}}</a>
-        </li> -->
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['ayuda']">ayuda</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['contacto']">De Contacto</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN">
           <a class="nav-link" [routerLink]="['verReserva']">ver Reservaciones</a>
         </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="!loginADMIN&&!loginUsuario">
+          <a class="nav-link" [routerLink]="['oplogin']">Login</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN||loginUsuario">
+          <label>usuario: {{usuarioLoggeado}}</label>
+        </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN||loginUsuario">
+          <a class="nav-link" [routerLink]="['login']" (click)="cerrarSesion()">CERRAR SESIÓN</a>
+        </li>
+
       </ul>
       <form class="d-flex" role="search">
         <!--<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
