--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -43,6 +43,9 @@
         <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN">
           <a class="nav-link" [routerLink]="['verReserva']">ver Reservaciones</a>
         </li>
+        <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN">
+          <a class="nav-link" [routerLink]="['consultas']">Consultas</a>
+        </li>
         <li class="nav-item" routerLinkActive="active" *ngIf="!loginADMIN&&!loginUsuario">
           <a class="nav-link" [routerLink]="['oplogin']">Login</a>
         </li>
@@ -51,10 +54,6 @@
         </li>
         <li class="nav-item" routerLinkActive="active" *ngIf="loginADMIN||loginUsuario">
           <a class="nav-link" [routerLink]="['login']" (click)="cerrarSesion()">CERRAR SESIÓN</a>
-        </li>
-
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['consultas']">Consultas</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
