--- a/src/app/components/ver-citas/ver-citas.component.html
+++ b/src/app/components/ver-citas/ver-citas.component.html
@@ -43,11 +43,10 @@
                     </div></td>
                 <td>
                     <!-- boton para generar qr, al dar click nos manda a la funcion de generar qr -->
-                    <button class="btn btn-warning" (click)="generarQr(reservacion.fullName)">Generar</button></td>
+                    <button class="btn btn-warning .buttonn" (click)="generarQr(reservacion.fullName)">GenerarQr</button></td>
                 <td>
-                    <button class="btn btn-danger" (click)="eliminar(reservacion.fullName)">Cancelar reservacion</button></td>
+                    <button class="btn btn-danger .buttonn" (click)="eliminar(reservacion.fullName)">Cancelar reservacion</button></td>
             </tr>
         </tbody>
     </table>
-
 </div>
