Qr y bajas funciona, estilos a ayuda y consultas

--- a/src/app/components/preguntas-f/preguntas-f.component.html
+++ b/src/app/components/preguntas-f/preguntas-f.component.html
@@ -10,40 +10,42 @@
   rel="stylesheet" />
 <br />
 
-<h2 >
-  Tienes alguna duda!
+<h2 class="tit1">
+  ¿Tienes alguna duda?
 </h2>
 <br />
-<div class="tit1">Aquí tienes una guía rápida</div>
+<hr>
 <div class="text">
-  <p class="tit2">1. Cómo crear una cuenta y acceder al sistema</p>
+  <p class="tit2">1. ¿Cómo crear una cuenta y acceder al sistema?</p>
   <p>
     Primero vamos a ingresar nuestros datos personales como nombre, correo
     numero de telefono y contraseña. El sistema verificara sus datos si todo
     esta en orden ingresara a la pagina con su cuenta automaticamente.
   </p>
   <p class="tit2">
-    2. Cómo buscar y filtrar alojamientos según mis preferencias
+    2. ¿Cómo buscar y filtrar alojamientos según mis preferencias?
   </p>
   <p>
     Para realizar esto no es necesario registrarse solo en nuestro menu en la
     parte superior derecha puedes buscar tu alojamiento que busques solo debes
     de ser muy especifico
   </p>
-  <p class="tit2">3. Cómo realizar una reserva y confirmarla</p>
+  <p class="tit2">3. ¿Cómo realizar una reserva y confirmarla?</p>
   <p>
     Primero se debe iniciar sesión con nuestra cuenta, posteriormente ya elegido
     el lugar se dará click en reservar esto automáticamente le pedirá sus datos
     personales al ingresar todo y el sistema lo verifique su reservación ya está
     echa.
   </p>
-  <p class="tit2">4. Cómo revisar y gestionar mis reservas existentes</p>
+  <p class="tit2">4. ¿Cómo revisar y gestionar mis reservas existentes?</p>
   <p>
     Se tiene que ingresar en la pestaña de “Mis Reservaciones” y ahí podrá
     revisar todo acerca de sus reservaciones
   </p>
 </div>
+<hr><br>
 <div class="tit1">Preguntas frecuentes</div>
+<br><hr>
 <div class="accordion" id="accordionExample">
   <div class="accordion-item">
     <h2 class="accordion-header">
@@ -173,10 +175,12 @@
     </div>
   </div>
 </div>
-<br /><br />
+<hr>
+
+<br><br>
 <div class="tit1">Recursos adicionales</div>
 <div>
-  <p class="text">¡Aquí tienes algunos blogs que te pueden interesar!</p>
+  <p class="tit2">¡Aquí tienes algunos blogs que te pueden interesar!</p>
 </div>
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
