--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -27,7 +27,6 @@
 >
   Acerca De StayMate
 </h2>
-br
 <div class="ch1">
   <div class="ch11">
     <h1 style="text-align: center">Algo que No Sabias</h1>
@@ -155,7 +154,7 @@ br
   </tfoot>
 </table>
 <br />
-<div class="contenedor">
+<div class="homer">
   <!--4 Componente-->
   <mat-icon
     routerLink="/home"
