--- a/src/app/components/pantalla-programadores/pantalla-programadores.component.html
+++ b/src/app/components/pantalla-programadores/pantalla-programadores.component.html
@@ -43,7 +43,7 @@
                     Maestra: Gegorgina Salazar Partida
                     <br>
                     <br>
-                    Mini proyecto 2
+                    Proyecto Final
                     <br>
                    SISTEMA DE RESERVACIÓN
                     <br>
@@ -67,9 +67,9 @@
             </div>
             <div class="card cardss">
                 <h2>Programador 2</h2>
-                <p>Jose Julian Carreon Plascencia.
+                <p>Monica Andrea Sotelo Cervantes.
                     <br>
-                    ID: 244145
+                    ID: 212024
                 </p>
             </div>
             <div class="card cardss">
@@ -84,6 +84,20 @@
                 <p>Gonzalo Ruvalcaba Solis.
                     <br>
                     ID: 263614
+                </p>
+            </div>
+            <div class="card cardss">
+                <h2>Programador 5</h2>
+                <p>Jose Julian Carreon Plascencia.
+                    <br>
+                    ID: 244145
+                </p>
+            </div>
+            <div class="card cardss">
+                <h2>Programador 6</h2>
+                <p>Zaid Diaz Salazar.
+                    <br>
+                    ID: 245635
                 </p>
             </div>
         </div>
