--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -35,7 +35,7 @@
           <a class="nav-link" [routerLink]="['graficas']">Gráficas</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['ayuda']">ayuda</a>
+          <a class="nav-link" [routerLink]="['ayuda']">Ayuda</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['contacto']">De Contacto</a>
