Agregué la conexión de la base de datos con las gráficas

--- a/src/app/components/graficas/graficas.component.html
+++ b/src/app/components/graficas/graficas.component.html
@@ -7,24 +7,16 @@
          <link
              href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap"
              rel="stylesheet">
-<body>
+<div class="container">
     <h1>{{Texto}}</h1>
-  <h2>Hospedajes mas reservados en StayMate</h2>
-  <div class="row">
-      <div class="col">
-          <div class="hola">
+  <h2>Reservaciones registradas en la base de datos de StayMate con el número de huéspedes</h2>
             <div class="container">
                 <canvas id="barChart"></canvas>
             </div>
+            <br><br><br>
             <div>
                 <p>{{Fecha}}</p>
                 <p>{{Fecha|date}}</p>
                 <p>{{Fecha|date:'dd/mm/yy'}}</p> 
               </div>
-            </div>
-            
-      </div>
-      
-  </div>
-  
-  </body>
+</div>
