--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['home']">Home</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item" routerLinkActive="active" *ngIf="loginUsuario">
           <a class="nav-link" [routerLink]="['alojamientos']">Alojamientos</a>
         </li>
         <li class="nav-item" routerLinkActive="active" *ngIf="loginUsuario">
