--- a/src/app/components/ver-citas/ver-citas.component.html
+++ b/src/app/components/ver-citas/ver-citas.component.html
@@ -30,6 +30,7 @@
                 <td>{{reservacion.data.arriveDate}}</td>
                 <td>{{reservacion.data.lastDate}}</td>
                 <td>{{reservacion.data.hora}}</td>
+                <td>{{reservacion.data.casaReservada.title}}</td>
                 <td> </td>
                 <td>
                     <!-- boton para generar qr, al dar click nos manda a la funcion de generar qr -->
